...
        }
    }

    private func deleteButton(color: Color) -> some View {
        Button(role: .destructive, action: delete) {
            Label {
                Text("Delete")
            } icon: {
                ColoredMenuImage(Lucide.trash2, color: color)
            }
        }
    }

...
